update package.json for improved project configuration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clip-extractor-frontend",
   "version": "1.0.0",
-  "homepage": "https://eisendatabase.com/clip-extractor",
+  "homepage": "https://eisendatabase.com/clip-extractor-test",
   "private": true,
   "dependencies": {
     "react": "^18.0.0",
