--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,15 @@
 {
   "name": "clip-extractor-frontend",
   "version": "1.0.0",
-  "homepage": "https://eisendatabase.com/clip-extractor-test",
+  "homepage": "https://eisendatabase.com/clip-extractor",
   "private": true,
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.0.0",
-    "@mui/material": "^5.0.0",
+    "@mui/material": "^5.17.1",
+    "@mui/icons-material": "5.17.1",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "rc-slider": "^10.0.0",
